# ArchXGreen

./: Dockerfile  Dockerfile.purple  README.md  push-to-ghcr.sh  pyproject.toml  scenario.toml
.github/workflows/: test-and-publish.yml
src/: server.py
src/green_agent/: __init__.py  a2a_server.py  agent.py  arch_validator.py  benchmark_loader.py  evaluator.py  feedback_generator.py  interactive.py  llm_testbench_parser.py  llm_validator.py  models.py  server.py
src/purple_agent/: __init__.py  agent.py  interactive.py
tests/: conftest.py  test_agent.py
