[project]
name = "archxgreen"
version = "0.1.0"
description = "ArchXBench green agent for AgentBeats"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "fastapi>=0.111.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "google-generativeai>=0.4.1",
]
